# o11a-backend

./: .gitignore  .rules  Cargo.toml  GETTING_STARTED.md  README.md  TODO.md
docs/: best_practices.md  formatter.md
docs/specs/: inline-code-reference-parsing.md
examples/: Create2.json  INudgeCampaign.json  INudgeCampaignFactory.json  NudgeCampaign.json  NudgeCampaignFactory.json  SafeERC20.json
src/: formatting.rs  lib.rs  main.rs  solidity.rs
src/api/: handlers.rs  mod.rs  routes.rs  state.rs  topic_view.rs
src/collaborator/: agent_context.rs  db.rs  formatter.rs  handlers.rs  mod.rs  models.rs  parser.rs  store.rs  websocket.rs
src/collaborator/agent/: context.rs  mod.rs  pipeline.rs  router.rs  task.rs
src/core/: data_context.rs  mod.rs  project.rs  topic.rs
src/data_context/: mod.rs
src/db/: mod.rs
src/documentation/: analyzer.rs  collaborator.rs  formatter.rs  mod.rs  parser.rs
src/solidity/: analyzer.rs  collaborator.rs  formatter.rs  mod.rs  parser.rs  transform.rs
