[package]
name = "o11a-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
foundry-compilers = "0.18.0"
foundry-compilers-artifacts = "0.18.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
markdown = "1.0.0-alpha.20"
regex = "1.10"
futures = "0.3"
